docs(project): :memo: Added base docs for the project and setup starlight

--- a/docs/src/content/docs/overview/introduction.mdx
+++ b/docs/src/content/docs/overview/introduction.mdx
@@ -1,10 +1,9 @@
-<div align="center">
-    <img src="https://i.ibb.co/zQk6JLc/fotor-2024042173316.png" alt="CrabRolls Logo" width="200" />
-    <h1>CrabRolls</h1>
-    <h3><strong>High level framework for Rust-based dapps on <a href="https://cartesi.io/">Cartesi machines</a></strong></h3>
-</div>
-
-## Overview
+---
+title: Introduction
+description: An introduction to CrabRolls.
+sidebar:
+    order: 0
+---
 
 This project aims to provide a high-level framework for developing Rust-based dapps on Cartesi machines. The framework will offer a set of tools and libraries to facilitate the development of dapps within the Rust environment, leveraging the [Rollups API](https://docs.cartesi.io/cartesi-rollups/api/). This includes tools for creation, testing, and deployment of decentralized applications, enabling developers to interact with the Cartesi machine from Rust.
 
@@ -16,10 +15,6 @@ This project aims to provide a high-level framework for developing Rust-based da
 -   **Testing Suite**: Integrated tools for robust testing without requiring running a Cartesi machine, leveraging Rust's testing capabilities.
 -   **Cargo Integration**: Easy distribution and installation through Rust’s build system and package manager with [cargo](https://doc.rust-lang.org/cargo/), deploying the framework as a crate on [crates.io](https://crates.io/).
 -   **Comprehensive Documentation**: Utilizing the tool [starlight](https://starlight.astro.build/) for documentation, including examples, guides, and API references.
-
-# Documentation
-
-The documentation for this project is available at [TODO](TODO).
 
 # Contributors
 
