docs(docs): :memo: Update new project info after run app

--- a/docs/src/content/docs/getting-started/new-project.mdx
+++ b/docs/src/content/docs/getting-started/new-project.mdx
@@ -53,6 +53,18 @@ Current we have a template to create a new project or example using CrabRolls, a
     cartesi run
     ```
 
+    The terminal will show the output of the application like:
+
+    ```bash title="Terminal"
+    prompt-1     | Anvil running at http://localhost:8545
+    prompt-1     | GraphQL running at http://localhost:8080/graphql
+    prompt-1     | Inspect running at http://localhost:8080/inspect/
+    prompt-1     | Explorer running at http://localhost:8080/explorer/
+    prompt-1     | Press Ctrl+C to stop the node
+    ```
+
+    Now you can test the [Echo example](../examples/echo) or modify the code to create your own project!
+
 </Steps>
 
 ## Using examples
@@ -61,7 +73,3 @@ This project has a collection of examples that demonstrate how to use high-level
 
 -   [Echo](../examples/echo)
 -   [JSON Blog](../examples/json)
-
-```
-
-```
