docs(unit tests): :memo: Added the usage of testig suite and examples

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -27,8 +27,8 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 	<Card title="High-level Abstractions" icon="seti:rust">
 		Simplified interfaces for common tasks such as state management, event handling, and more.
 	</Card>
-	<Card title="Modular Design" icon="puzzle">
-		Flexible and extensible architecture for easy customization and extension.
+	<Card title="Examples" icon="puzzle">
+		Comprehensive examples demonstrating how to build dapps using CrabRolls.
 	</Card>
 	<Card title="Testing Suite" icon="approve-check">
 		Integrated tools for robust testing without requiring running a Cartesi machine, leveraging Rust's testing capabilities.
