--- a/docs/src/content/docs/getting-started/new-project.mdx
+++ b/docs/src/content/docs/getting-started/new-project.mdx
@@ -63,7 +63,7 @@ Current we have a template to create a new project or example using CrabRolls, a
     prompt-1     | Press Ctrl+C to stop the node
     ```
 
-    Now you can test the [Echo example](../examples/echo) or modify the code to create your own project!
+    Now you can test the [Examples](#using-examples) or create your own project based on the template!
 
 </Steps>
 
@@ -71,5 +71,6 @@ Current we have a template to create a new project or example using CrabRolls, a
 
 This project has a collection of examples that demonstrate how to use high-level features of CrabRolls. Each example is a standalone project that can be run independently. All the examples code is available in the [CrabRolls repository](https://github.com/crabrolls-cartesi/crabrolls/tree/main/examples) and the use of each example is documented in the `examples` section of this documentation. Current available examples are:
 
--   [Echo](../examples/echo)
--   [JSON Blog](../examples/json)
+-   [Echo](examples/echo)
+-   [JSON Blog](examples/json)
+-   [Super HoneyPot](examples/super-honeypot)
