docs(docs): :memo: Added "Environment" and "Utils and Macros" usage info

--- a/docs/src/content/docs/getting-started/examples/super-honeypot.mdx
+++ b/docs/src/content/docs/getting-started/examples/super-honeypot.mdx
@@ -68,7 +68,7 @@ cartesi send generic --input='{
 }'
 ```
 
-Now you can view the vouncher in the `Cartesi Explorer` and execute the withdrawal.
+Now you can view the voucher in the `Cartesi Explorer` and execute the withdrawal.
 
 #### Inspecting Ether Balance
 
