--- a/docs/src/content/docs/overview/introduction.mdx
+++ b/docs/src/content/docs/overview/introduction.mdx
@@ -18,4 +18,8 @@ This project aims to provide a high-level framework for developing Rust-based da
 
 # Contributors
 
--   [**Vinicios Lugli**](https://github.com/ViniciosLugli) - _Maintainer_
+-   **Vinicios Lugli** - _Maintainer_
+    -   Email - [vinicioslugli@gmail.com](mailto:vinicioslugli@gmail.com)
+    -   [LinkedIn](https://github.com/ViniciosLugli)
+    -   [GitHub](https://github.com/ViniciosLugli)
+    -   Discord - @vinicioslugli | You can also find me on the [Cartesi Discord server](https://discord.gg/cartesi)!.
