refactor(docs): :recycle: Refactor super honey pot name to wallet abstraction

--- a/docs/src/content/docs/getting-started/examples/wallet-abstraction.mdx
+++ b/docs/src/content/docs/getting-started/examples/wallet-abstraction.mdx
@@ -1,6 +1,6 @@
 ---
-title: Super Honeypot
-description: A Super Honeypot application, managing deposits, withdrawals, and balance inspections for various token standards.
+title: Wallet Abstraction
+description: A Wallet Abstraction application, managing deposits, withdrawals, and balance inspections for various token standards.
 ---
 
 import { Aside } from '@astrojs/starlight/components';
@@ -10,7 +10,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 
 ## Overview
 
-The SuperHoneypot application is a robust example that demonstrates handling deposits, withdrawals, and balance inspections for Ether, ERC20, ERC721, and ERC1155 tokens using the Crabrolls framework. This document details the application's usage, including how to send JSON-based inputs and inspect outputs. You can find the source code in the [CrabRolls repository](https://github.com/crabrolls-cartesi/crabrolls/blob/main/examples/super_honeypot.rs).
+The WalletAbstraction application is a robust example that demonstrates handling deposits, withdrawals, and balance inspections for Ether, ERC20, ERC721, and ERC1155 tokens using the Crabrolls framework. This document details the application's usage, including how to send JSON-based inputs and inspect outputs. You can find the source code in the [CrabRolls repository](https://github.com/crabrolls-cartesi/crabrolls/blob/main/examples/wallet_abstraction.rs).
 
 ## Usage
 
