--- a/docs/src/content/docs/getting-started/new-project.mdx
+++ b/docs/src/content/docs/getting-started/new-project.mdx
@@ -98,6 +98,6 @@ If you want to create a new project or example from scratch, you can follow the 
 
 This project has a collection of examples that demonstrate how to use high-level features of CrabRolls. Each example is a standalone project that can be run independently. All the examples code is available in the [CrabRolls repository](https://github.com/crabrolls-cartesi/crabrolls/tree/main/examples) and the use of each example is documented in the `examples` section of this documentation. Current available examples are:
 
--   [Echo](examples/echo)
--   [JSON Blog](examples/json)
--   [Super HoneyPot](examples/super-honeypot)
+-   [Echo](../examples/echo)
+-   [JSON Blog](../examples/json)
+-   [Wallet Abstraction](../examples/wallet-abstraction)
